--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-torch==1.4.0
-torchvision==0.5.0
-numpy
-tqdm
-tensorboard
-tensorboardX
+# torch==1.4.0
+# torchvision==0.5.0
+# numpy
+# tqdm
+# tensorboard
+# tensorboardX
 ml-collections
 medpy
 SimpleITK
